// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Label renders the component in the color passed to it 1`] = `
<body>
  <div>
    <div
      class="tc-view__TcView-nuazoi-0 video-label__Container-spiidi-1 cEOivS"
    >
      <div
        class="tc-view__TcView-nuazoi-0 video-label__IconContainer-spiidi-2 iwncpC"
      >
        <svg
          aria-label="icon-video"
          height="9"
          role="img"
          title="Video Icon"
          viewBox="0 0 68 40"
          width="15.299999999999999"
        >
          <title>
            Video Icon
          </title>
          <rect
            fill="blue"
            height="40"
            width="50"
            x="0"
            y="0"
          />
          <polygon
            fill="blue"
            points="52 12 68 2 68 38 52 28"
          />
        </svg>
      </div>
      <div
        class="tc-text__TcText-sc-15igzev-0 video-label__VideoLabelText-spiidi-0 cWvqEF"
        style="font-family: Roboto-Regular, Roboto-Regular-fallback, sans-serif; font-size: 12px; line-height: 13px; flex: -1; font-weight: 400; letter-spacing: 0.6px; margin-left: 5px; padding-top: 1px; color: blue;"
      >
        VIDEO
      </div>
    </div>
  </div>
</body>
`;

exports[`Video Label renders the title that is passed to the component 1`] = `
<body>
  <div>
    <div
      class="tc-view__TcView-nuazoi-0 video-label__Container-spiidi-1 cEOivS"
    >
      <div
        class="tc-view__TcView-nuazoi-0 video-label__IconContainer-spiidi-2 iwncpC"
      >
        <svg
          aria-label="icon-video"
          height="9"
          role="img"
          title="Video Icon"
          viewBox="0 0 68 40"
          width="15.299999999999999"
        >
          <title>
            Video Icon
          </title>
          <rect
            fill="black"
            height="40"
            width="50"
            x="0"
            y="0"
          />
          <polygon
            fill="black"
            points="52 12 68 2 68 38 52 28"
          />
        </svg>
      </div>
      <div
        class="tc-text__TcText-sc-15igzev-0 video-label__VideoLabelText-spiidi-0 cWvqEF"
        style="font-family: Roboto-Regular, Roboto-Regular-fallback, sans-serif; font-size: 12px; line-height: 13px; flex: -1; font-weight: 400; letter-spacing: 0.6px; margin-left: 5px; padding-top: 1px; color: black;"
      >
        SWIMMING
      </div>
    </div>
  </div>
</body>
`;

exports[`Video Label shows the default text of VIDEO when no title is passed to the component 1`] = `
<body>
  <div>
    <div
      class="tc-view__TcView-nuazoi-0 video-label__Container-spiidi-1 cEOivS"
    >
      <div
        class="tc-view__TcView-nuazoi-0 video-label__IconContainer-spiidi-2 iwncpC"
      >
        <svg
          aria-label="icon-video"
          height="9"
          role="img"
          title="Video Icon"
          viewBox="0 0 68 40"
          width="15.299999999999999"
        >
          <title>
            Video Icon
          </title>
          <rect
            fill="black"
            height="40"
            width="50"
            x="0"
            y="0"
          />
          <polygon
            fill="black"
            points="52 12 68 2 68 38 52 28"
          />
        </svg>
      </div>
      <div
        class="tc-text__TcText-sc-15igzev-0 video-label__VideoLabelText-spiidi-0 cWvqEF"
        style="font-family: Roboto-Regular, Roboto-Regular-fallback, sans-serif; font-size: 12px; line-height: 13px; flex: -1; font-weight: 400; letter-spacing: 0.6px; margin-left: 5px; padding-top: 1px; color: black;"
      >
        VIDEO
      </div>
    </div>
  </div>
</body>
`;
